--- a/ProjectUbuild/Views/Profile/Index.cshtml
+++ b/ProjectUbuild/Views/Profile/Index.cshtml
@@ -557,7 +557,7 @@ else
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-6">
-                                                        <div class="form-group form-group-default">
+                                                        <div class="form-group form-group-default required">
                                                             <label>Employer Phone .No </label>
                                                             <input type="text" class="form-control" name="EmployerPhoneNo" required="" data-ng-model="vm.profile.EmployerPhoneNo">
                                                         </div>
