--- a/ProjectUbuild/assets/foundry/css/custom.css
+++ b/ProjectUbuild/assets/foundry/css/custom.css
@@ -2,7 +2,7 @@
 body::-webkit-scrollbar {
     width: 1em;
 }
- 
+
 body::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
@@ -18,12 +18,12 @@ body::-webkit-scrollbar-thumb {
 
 .nav-utility {
     border-bottom: 1px solid #d53a3f;
-     overflow: visible; 
+    overflow: visible;
 }
 
 .text-tabs .tab-title:after {
     background: #b7244c;
-    height:4px
+    height: 4px
 }
 
 .header {
@@ -39,6 +39,7 @@ body::-webkit-scrollbar-thumb {
     background: #670a08;
     color: #fff;
 }
+
 .btn-filled {
     background: #b52725;
     color: #fff;
@@ -120,6 +121,7 @@ input[type="submit"], button[type="submit"] {
 .form-group {
     margin-bottom: 10px;
 }
+
 form-group label:not(.error) {
     font-family: 'Montserrat';
     font-size: 10.5px;
@@ -186,6 +188,7 @@ label, input, button, select, textarea {
     right: 12px;
     top: 6px;
 }
+
 .form-group-default.form-group-default-select2 {
     padding: 0;
 }
@@ -193,6 +196,7 @@ label, input, button, select, textarea {
 select.full-width + .select2-container {
     width: 100% !important;
 }
+
 .form-group-default.form-group-default-select2 .select2-container .select2-selection--single {
     padding-top: 20px;
     height: 52px;
@@ -221,20 +225,20 @@ select.full-width + .select2-container {
         padding-top: 1px;
     }
 
-.select2-container .select2-selection .select2-selection__arrow {
-    top: auto;
-    bottom: 5px;
-    right: 10px !important;
-    left: auto;
-    background: transparent;
-    border-left: 0px;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
+    .select2-container .select2-selection .select2-selection__arrow {
+        top: auto;
+        bottom: 5px;
+        right: 10px !important;
+        left: auto;
+        background: transparent;
+        border-left: 0px;
+        -webkit-transition: all 0.3s ease;
+        transition: all 0.3s ease;
+    }
 
 .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
     background: #f3f3f3;
-     color: #2c2c2c; 
+    color: #2c2c2c;
 }
 
 #house_selction_list li .card {
@@ -243,11 +247,9 @@ select.full-width + .select2-container {
 
 #house_selction_list {
     width: inherit;
-
 }
 
 house_selction_list li {
-
 }
 
 /*#house_selction_list li input[type="radio"] {
@@ -289,6 +291,7 @@ div.cs-select {
 .cs-select {
     background-color: transparent;
 }
+
     .cs-select .cs-placeholder {
         width: 100%;
     }
@@ -324,6 +327,7 @@ div.cs-skin-slide > span {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
 div.cs-skin-slide > span:after, div.cs-skin-slide.cs-active > span:after {
     content: "\f0d7";
     font-family: FontAwesome;
@@ -344,6 +348,7 @@ div.cs-skin-slide > span:after, div.cs-skin-slide.cs-active > span:after {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
 div.cs-skin-slide .cs-options {
     height: auto;
     padding: 9px 0;
@@ -374,6 +379,7 @@ div.cs-skin-slide .cs-options {
     background: #fff;
     visibility: hidden;
 }
+
 div.cs-skin-slide .cs-options ul {
     width: 100%;
     display: table;
@@ -411,6 +417,7 @@ label, input, button, select, textarea {
     font-weight: normal;
     line-height: 20px;
 }
+
 .cs-backdrop {
     background: none repeat scroll 0 0 #fff;
     border: 1px solid rgba(0, 0, 0, 0.07);
@@ -422,6 +429,7 @@ label, input, button, select, textarea {
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
 }
+
 div.cs-skin-slide .cs-options ul li span {
     display: table-cell;
     font-size: 14px;
@@ -439,10 +447,10 @@ div.cs-skin-slide .cs-options ul li span {
     margin-top: -55px
 }
 
-#houseDesignWrapper .row { }
+    #houseDesignWrapper .row {
+    }
 
 #sidebar_design {
-   
     height: -webkit-fill-available;
 }
 
@@ -450,39 +458,31 @@ div.cs-skin-slide .cs-options ul li span {
     margin-right: 5px
 }
 
-#customizationTable td img {
-    width: 125px;
+    #customizationTable td img {
+        width: 125px;
+    }
 
-}
-
-@media (min-width: 1280px) 
-.rh_prop_card .rh_prop_card__details {
+@media (min-width: 1280px) .rh_prop_card .rh_prop_card__details {
     padding: 2.5rem;
 }
 
-@media (min-width: 1140px) 
-.rh_prop_card .rh_prop_card__details {
+@media (min-width: 1140px) .rh_prop_card .rh_prop_card__details {
     padding: 2rem;
 }
 
-@media (min-width: 1024px) 
-
-.rh_prop_card .rh_prop_card__details {
+@media (min-width: 1024px) .rh_prop_card .rh_prop_card__details {
     padding: 2rem;
 }
 
-@media (min-width: 768px)
-.rh_prop_card .rh_prop_card__details {
+@media (min-width: 768px) .rh_prop_card .rh_prop_card__details {
     padding: 2.5rem;
 }
 
-@media (min-width: 480px) 
-.rh_prop_card .rh_prop_card__details {
+@media (min-width: 480px) .rh_prop_card .rh_prop_card__details {
     padding: 2.5rem;
 }
 
-@media (min-width: 320px) 
-.rh_prop_card .rh_prop_card__details {
+@media (min-width: 320px) .rh_prop_card .rh_prop_card__details {
     padding: 2rem;
 }
 
@@ -513,33 +513,27 @@ rh_prop_card .rh_prop_card__details .rh_prop_card__meta_wrap {
     margin-bottom: 0.5rem;
 }
 
-@media (min-width: 1280px) 
-.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+@media (min-width: 1280px) .rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
     padding: 0 1.5rem 1.5rem 0;
 }
 
-@media (min-width: 1140px) 
-.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+@media (min-width: 1140px) .rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
     padding: 0 1rem 1rem 0;
 }
 
-@media (min-width: 1024px) 
-.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+@media (min-width: 1024px) .rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
     padding: 0 1rem 1rem 0;
 }
 
-@media (min-width: 768px) 
-.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+@media (min-width: 768px) .rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
     padding: 0 1rem 1rem 0;
 }
 
-@media (min-width: 480px) 
-.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+@media (min-width: 480px) .rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
     padding: 0 1.5rem 1.5rem 0;
 }
 
-@media (min-width: 320px) 
-.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+@media (min-width: 320px) .rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
     padding: 0 1rem 1rem 0;
 }
 
@@ -547,33 +541,27 @@ rh_prop_card .rh_prop_card__details .rh_prop_card__meta_wrap {
     padding: 0 1.5rem 1.5rem 0;
 }
 
-@media (min-width: 1280px) 
-.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+@media (min-width: 1280px) .rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
     padding: 0 1.5rem 1.5rem 0;
 }
 
-@media (min-width: 1140px) 
-.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+@media (min-width: 1140px) .rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
     padding: 0 1rem 1rem 0;
 }
 
-@media (min-width: 1024px) 
-.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+@media (min-width: 1024px) .rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
     padding: 0 1rem 1rem 0;
 }
 
-@media (min-width: 768px) 
-.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+@media (min-width: 768px) .rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
     padding: 0 1rem 1rem 0;
 }
 
-@media (min-width: 480px) 
-.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+@media (min-width: 480px) .rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
     padding: 0 1.5rem 1.5rem 0;
 }
 
-@media (min-width: 320px) 
-.rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
+@media (min-width: 320px) .rh_prop_card .rh_prop_card__details .rh_prop_card__meta {
     padding: 0 1rem 1rem 0;
 }
 
@@ -613,7 +601,8 @@ svg:not(:root) {
     font-weight: 400;
     line-height: 1.2;
 }
-.rh_prop_card__priceLabel h4{
+
+.rh_prop_card__priceLabel h4 {
     margin-bottom: 10px
 }
 
@@ -627,7 +616,7 @@ svg:not(:root) {
      margin-bottom: 0; 
     border-radius: 0;
 }*/
-#accordion .card{
+#accordion .card {
     margin-bottom: 10px
 }
 
@@ -643,17 +632,18 @@ windows body, .windows p {
     overflow: hidden;
     display: inline-block;
 }
-.fileinput-button input {
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 0;
-    opacity: 0;
-    -ms-filter: 'alpha(opacity=0)';
-    font-size: 200px !important;
-    direction: ltr;
-    cursor: pointer;
-}
+
+    .fileinput-button input {
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin: 0;
+        opacity: 0;
+        -ms-filter: 'alpha(opacity=0)';
+        font-size: 200px !important;
+        direction: ltr;
+        cursor: pointer;
+    }
 
 /* Fixes for IE < 8 */
 @media screen\9 {
@@ -663,9 +653,223 @@ windows body, .windows p {
         height: 100%;
     }
 }
+
 #profileWrapper input[type="text"], #profileWrapper input[type="password"], #loanForm input[type="text"] {
     margin-bottom: 0
 }
+
+
+/*Messages page styles*/
+
+
+
+.inbox_people {
+    background: #f8f8f8 none repeat scroll 0 0;
+    float: left;
+    overflow: hidden;
+    width: 40%;
+    border-right: 1px solid #c4c4c4;
+}
+
+.inbox_msg {
+    border: 1px solid #c4c4c4;
+    clear: both;
+    overflow: hidden;
+}
+
+.top_spac {
+    margin: 20px 0 0;
+}
+
+
+.recent_heading {
+    float: left;
+    width: 40%;
+}
+
+.srch_bar {
+    display: inline-block;
+    text-align: right;
+    width: 60%;
+    padding:
+}
+
+.headind_srch {
+    padding: 10px 29px 10px 20px;
+    overflow: hidden;
+    border-bottom: 1px solid #c4c4c4;
+}
+
+.recent_heading h4 {
+    color: #05728f;
+    font-size: 21px;
+    margin: auto;
+}
+
+.srch_bar input {
+    border: 1px solid #cdcdcd;
+    border-width: 0 0 1px 0;
+    width: 80%;
+    padding: 2px 0 4px 6px;
+    background: none;
+}
+
+.srch_bar .input-group-addon button {
+    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+    border: medium none;
+    padding: 0;
+    color: #707070;
+    font-size: 18px;
+}
+
+.srch_bar .input-group-addon {
+    margin: 0 0 0 -27px;
+}
+
+.chat_ib h5 {
+    font-size: 15px;
+    color: #464646;
+    margin: 0 0 8px 0;
+}
+
+    .chat_ib h5 span {
+        font-size: 13px;
+        float: right;
+    }
+
+.chat_ib p {
+    font-size: 14px;
+    color: #989898;
+    margin: auto
+}
+
+.chat_img {
+    float: left;
+    width: 11%;
+}
+
+.chat_ib {
+    float: left;
+    padding: 0 0 0 15px;
+    width: 88%;
+}
+
+.chat_people {
+    overflow: hidden;
+    clear: both;
+}
+
+.chat_list {
+    border-bottom: 1px solid #c4c4c4;
+    margin: 0;
+    padding: 18px 16px 10px;
+}
+
+.inbox_chat {
+    height: 550px;
+    overflow-y: scroll;
+}
+
+.active_chat {
+    background: #ebebeb;
+}
+
+.incoming_msg_img {
+    display: inline-block;
+    width: 6%;
+}
+
+.received_msg {
+    display: inline-block;
+    padding: 0 0 0 10px;
+    vertical-align: top;
+    width: 92%;
+}
+
+.received_withd_msg p {
+    background: #ebebeb none repeat scroll 0 0;
+    border-radius: 3px;
+    color: #646464;
+    font-size: 14px;
+    margin: 0;
+    padding: 5px 10px 5px 12px;
+    width: 100%;
+}
+
+.time_date {
+    color: #747474;
+    display: block;
+    font-size: 12px;
+    margin: 8px 0 0;
+}
+
+.received_withd_msg {
+    width: 57%;
+}
+
+.mesgs {
+    float: left;
+    padding: 30px 15px 0 25px;
+    width: 100%;
+}
+
+.sent_msg p {
+    background: #05728f none repeat scroll 0 0;
+    border-radius: 3px;
+    font-size: 14px;
+    margin: 0;
+    color: #fff;
+    padding: 5px 10px 5px 12px;
+    width: 100%;
+}
+
+.outgoing_msg {
+    overflow: hidden;
+    margin: 26px 0 26px;
+}
+
+.sent_msg {
+    float: right;
+    width: 46%;
+}
+
+.input_msg_write input {
+    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+    border: medium none;
+    color: #4c4c4c;
+    font-size: 15px;
+    min-height: 48px;
+    width: 100%;
+}
+
+.type_msg {
+    border-top: 1px solid #c4c4c4;
+    position: relative;
+}
+
+.msg_send_btn {
+    background: #05728f none repeat scroll 0 0;
+    border: medium none;
+    border-radius: 50%;
+    color: #fff;
+    cursor: pointer;
+    font-size: 17px;
+    height: 33px;
+    position: absolute;
+    right: 0;
+    top: 11px;
+    width: 33px;
+}
+
+.messaging {
+    padding: 0 0 50px 0;
+}
+
+.msg_history {
+    height: 516px;
+    overflow-y: auto;
+}
+/*end*/
 
 .nav-tabs-fillup > li > a:after {
     -webkit-backface-visibility: hidden;
@@ -691,8 +895,13 @@ windows body, .windows p {
 }
 
 .tooltip.top .tooltip-inner {
-    background-color:red;
+    background-color: red;
 }
+
 .tooltip.top .tooltip-arrow {
     border-top-color: red;
 }
+
+/*.row.column-seperation .col-md-4:hover {
+    background: #a17c7c
+}*/
