--- a/ProjectUbuild/Views/Shared/_Layout.cshtml
+++ b/ProjectUbuild/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@using ProjectUbuild.Models
 <!doctype html>
-<html lang="en" ng-app="ubuild" data-ng-controller="AppCtrl">
+<html lang="en" ng-app="ubuild" >
 <head>
 
     <meta charset="UTF-8">
