--- a/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
+++ b/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
@@ -122,6 +122,23 @@
                     <h3>= <span data-ng-bind="vm.model.houseCostCurrency"></span> <span data-ng-bind="vm.model.totalLoanAmt | currency :''"></span></h3>
                 </div>
                 <div class="panel-body">
+                    <form>
+                        <div class="label font-weight-bold text-white">Check eligibility for owning this house</div>
+                        <div class="form-group form-group-default input-group">
+                            <label for="houseEligibility" class="ng-binding">Please Select Loan Tenure in Years.</label>
+                            <select data-ng-model="vm.model.tenure" id="loanTenure" placeholder="Loan Tenure" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
+                                <option value="">Select Loan Tenure</option>
+                                <option data-ng-repeat="t in vm.getTenureRange()" value="{{t}}">{{t}}</option>
+                            </select>
+                        </div>
+                        <div class="form-group form-group-default input-group">
+                            <label for="houseEligibility" class="ng-binding">Please enter your monthly.</label>
+                            <input autocomplete="off" data-ng-model="vm.model.income" id="houseEligibility" placeholder="Monthly Income here" type="Text" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
+                            <span ng-show="vm.model.tenure && vm.model.income" class="input-group-addon primary p-r-15 p-l-15" style="cursor: pointer; background: #ac5e81" data-ng-click="vm.checkEligibility()">
+                                Submit
+                            </span>
+                        </div>
+                    </form>
                     <h4>Base house cost : <span data-ng-bind="vm.model.houseCostCurrency"></span> <span>@Model.BareDesignCost</span></h4>
                     <table class="table cart mb48">
                         <thead>
@@ -150,23 +167,7 @@
                         </tr>
                         </tbody>
                     </table>
-                    <form>
-                        <h4>You may be elligible for a loan to own this house. </h4>
-                        <div class="form-group form-group-default input-group">
-                            <label for="houseEligibility" class="ng-binding">Please Select Loan Tenure in Years.</label>
-                            <select data-ng-model="vm.model.tenure" id="loanTenure" placeholder="Loan Tenure" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
-                                <option value="">Select Loan Tenure</option>
-                                <option data-ng-repeat="t in vm.getTenureRange()" value="{{t}}">{{t}}</option>
-                            </select>
-                        </div>
-                        <div class="form-group form-group-default input-group">
-                            <label for="houseEligibility" class="ng-binding">Please enter your monthly.</label>
-                            <input autocomplete="off" data-ng-model="vm.model.income" id="houseEligibility" placeholder="Monthly Income here" type="Text" class="form-control ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched" style="">
-                            <span ng-show="vm.model.tenure && vm.model.income" class="input-group-addon primary p-r-15 p-l-15" style="cursor: pointer; background: #ac5e81" data-ng-click="vm.checkEligibility()">
-                                Submit
-                            </span>
-                        </div>
-                    </form>
+
                 </div>
             </div>
         </div>
