--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -94,6 +94,7 @@
 <script src="~/Scripts/app/app.module.js"></script>
 <script src="~/Scripts/app/services.factory.js"></script>
 <script src="~/Scripts/app/utilities.factory.js"></script>
+<script src="~/Scripts/app/messaging.controller.js"></script>
 @*@if (route == "/loan/eligibility")
 {
     <script src="~/Scripts/app/eligibility.controller.js"></script>
