--- a/ProjectUbuild/Views/Home/MyApplications.cshtml
+++ b/ProjectUbuild/Views/Home/MyApplications.cshtml
@@ -89,7 +89,7 @@
                                         <div class="form-group">
                                             <label class="col-sm-4 control-label">Loan Amount</label>
                                             <div class="col-sm-8">
-                                                <p class="form-control-static">@Model.currentLoanApplication.CurrencyCode @Model.currentLoanApplication.AmtSought</p>
+                                                <p class="form-control-static">@Model.currentLoanApplication.CurrencyCode @Model.currentLoanApplication.AmtSought.ToString("N2")</p>
                                             </div>
                                         </div>
                                         <div class="form-group">
