--- a/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
+++ b/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
@@ -57,17 +57,17 @@
                                                 <input type="checkbox" data-ng-model="vm.view3D">
                                                 <span class="slider round"></span>
                                             </label>
-                                            <label class="font-weight-bold">3D View</label> 
+                                            <label class="font-weight-bold" data-ng-hide="vm.view3D">2D View</label>
+                                            <label class="font-weight-bold" data-ng-show="vm.view3D">3D View</label> 
                                         </div>
                                        
                                     </div>
                                 </div>
-                                @if (Request.IsAuthenticated)
-                                {
+                                
                                     <div class="col-sm-4">
                                         <button class="btn btn-primary btn-sm pull-right" data-ng-click="vm.saveCustomization()">Save Customization</button>
                                     </div>
-                                }
+                                
                                
                             </div>
                            
@@ -75,10 +75,10 @@
                     </div>
                     <div class="panel-body" >
                         <div class="col-md-12" data-ng-hide="vm.view3D">
-                            <img src="~/images/HouseImages/@Model.DesignImage" class="img-responsive img-rounded" alt="House Image">
+                            <img src="~/images/HouseImages/@Model.HouseImage " class="img-responsive img-rounded" alt="House Image">
                         </div>
                         <div class="col-md-12" data-ng-show="vm.view3D">
-                            <img src="~/images/HouseImages/@Model.HouseImage" class="img-responsive img-rounded" alt="House Image">
+                            <img src="~/images/HouseImages/@Model.DesignImage " class="img-responsive img-rounded" alt="House Image">
                         </div>
                     </div>
                     <div class="panel-footer">
@@ -139,7 +139,7 @@
                             </span>
                         </div>
                     </form>
-                    <h4>Base house cost : <span data-ng-bind="vm.model.houseCostCurrency"></span> <span>@Model.BareDesignCost</span></h4>
+                    <h4>Base house cost : <span data-ng-bind="vm.model.houseCostCurrency"></span> <span>@Model.BareDesignCost.ToString("N2")</span></h4>
                     <table class="table cart mb48">
                         <thead>
                         <tr>
