--- a/ProjectUbuild/Views/FullHouse/Index.cshtml
+++ b/ProjectUbuild/Views/FullHouse/Index.cshtml
@@ -53,7 +53,7 @@
                                 <div class="panel-body rh_prop_card">
                                     <div class="rh_prop_card__details row">
 
-                                        <img src="~/images/HouseImages/@design.HouseImage" class="img-responsive" style="width: 100%;height: 210px" />
+                                        <img src="~/images/HouseImages/@design.DesignImage" class="img-responsive" style="width: 100%;height: 210px" />
                                         <h3 style="margin-top: 15px">
                                             @Html.ActionLink(design.DesignName, "HouseDesign", "FullHouse", new { @id = design.RecordId }, new { })
                                         </h3>
