--- a/ProjectUbuild/Views/Shared/_Head.cshtml
+++ b/ProjectUbuild/Views/Shared/_Head.cshtml
@@ -27,7 +27,8 @@
 @*<link href="~/pages/css/pages.min.css" rel="stylesheet" />*@
 <link href="~/pages/css/pages-icons.css" rel="stylesheet" />
 <link href="~/assets/css/jquery.fileupload.css" rel="stylesheet" />
-<link href="~/assets/css/jquery.fileupload-ui.css" rel="stylesheet" />
+<link href="~/assets/css/jquery.fileupload-ui.css" rel="stylesheet"/>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet" />
 <!-- CSS adjustments for browsers with JavaScript disabled -->
 <noscript><link rel="stylesheet" href="~/assets/css/jquery.fileupload-noscript.css"></noscript>
 <noscript><link rel="stylesheet" href="~/assets/css/jquery.fileupload-ui-noscript.css"></noscript>
