--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -87,10 +87,12 @@
 <script src="~/assets/js/dashboard.js" type="text/javascript"></script>
 <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 <script src="~/Scripts/angular.min.js"></script>
 <script src="~/Scripts/angular-ui-router.min.js"></script>
 <script src="~/Scripts/angular-animate.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-messages.js"></script>
+<script src="~/Scripts/lockr.js"></script>
 <script src="~/Scripts/app/app.module.js"></script>
 <script src="~/Scripts/app/services.factory.js"></script>
 <script src="~/Scripts/app/utilities.factory.js"></script>
@@ -116,6 +118,7 @@ else if (route.IndexOf("/fullhouse/housedesign", StringComparison.Ordinal) > -1)
 {
     <script src="~/Scripts/app/HouseDesign.js"></script>
 }
+
 <script src="~/assets/js/scripts.js" type="text/javascript"></script>
 
 <style>
